# ufuzz

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  LICENSE.gpl-v2  README.md  gdb.rc  uefi-target-with-debug.json
.cargo/: config.toml
.github/: CODEOWNERS
corpus-gen/: .gitignore  Cargo.toml  flake.nix
corpus-gen/src/: main.rs
coverage/: Cargo.toml  build.rs  rust-toolchain.toml
coverage/examples/: dump_msarray.rs  test_basic_coverage.rs  test_dump.rs  test_exp_hook_odd.rs  test_exp_hook_odd_even_difference.rs  test_exp_hook_seqw.rs  test_exp_hook_seqw2.rs  test_exp_hook_whole_triad.rs  test_exp_imm_store_load.rs  test_exp_odd_resume.rs  test_exp_seqw_saveuip.rs  test_exp_subr.rs  test_exp_zeroext.rs  test_filter.rs  test_filter_staging_buffer.rs  test_filter_timing.rs  test_rdrand.rs  test_same_triad_hook.rs  test_sequence_word_compile.rs  test_setup.rs  test_setup_arged.rs  test_setup_simple.rs  test_speculation.rs  test_validation.rs  todo_why_odd.rs
coverage/patches/: compute_exit_jump.func  coverage_entry.up  coverage_exit.up  coverage_handler.up  func_hook.up  handler.up  handler_inst.func  helpers.u  hook_entry.u  increase_coverage_and_jumpback_address.func  ldat_read.up  patch.u  record_coverage.func  record_coverage_and_jumpback_address.func  record_coverage_no_state_change.func  record_timestamp.func  selfcheck.up  setup.func  variables.up  write_exit_handler.func
coverage/patches/lib/: compute_hook.func  compute_seqw_jump.func  crc_calc.func  crc_calc_round.func  hook_write.func  jump_if_equal.func  jump_if_not_equal.func  ldat_read.func  ldat_write.func  pause_frontend.func  restore_frontend.func  resume_frontend.func  sequencer_write.func  stack_pop.func  stack_push.func
coverage/patches/misc/: selfcheck.up
coverage/patches/sys/: dump_staging_buffer.up  func_dump_memory.func  func_hook.up  func_hook_many.up  func_ldat_read.up  func_ldat_read_hooks.up  func_ldat_read_seqw.up
coverage/src/: .gitignore  blacklist.txt  coverage_harness.rs  error_unwrap.rs  harness.rs  interface.rs  interface_definition.rs  lib.rs  main.rs  ms_array0.txt  ms_array1.txt  page_allocation.rs  ucode_dump.txt  udump.rs
coverage/src/coverage_harness/: modification_engine.rs
coverage/src/harness/: coverage_harness.rs  iteration_harness.rs  validation_harness.rs
coverage/src/harness/coverage_harness/: hookable_address_iterator.rs  modification_engine.rs
custom_processing_unit/: Cargo.toml  README.md  build.rs
custom_processing_unit/models/: disasm.py
custom_processing_unit/models/000506C9/: glm.ucode  ms_array0.txt  ms_array3.txt  ms_array4.txt
custom_processing_unit/models/000506CA/: glm.ucode
custom_processing_unit/patches/: func_ldat_read.u
custom_processing_unit/src/: .gitignore  arch.rs  helpers.rs  lib.rs
data_types/: Cargo.toml
efitest/: Cargo.toml  build.rs
efitest/patches/: coverage_entry.u  coverage_exit.u  coverage_handler.u
efitest/src/: .gitignore  helpers.rs  main.rs
emulation_test/: Cargo.toml
emulation_test/patches/: rdrand_patch.u
emulation_test/src/: main.rs
evaluation/: EVALUATION.md  README.md
evaluation/poc/: Cargo.toml
evaluation/poc_agent/: Cargo.toml
evaluation/poc_agent/src/: f0_microcode.rs  f1_microspectre.rs  lib.rs  poc_ucode_update.rs
evaluation/poc_data/: Cargo.toml
evaluation/poc_data/src/: f0_microcode.rs  f1_microspectre.rs  lib.rs
fuzzer_data/: Cargo.toml
fuzzer_data/src/: decoder.rs  genetic_pool.rs  instruction_corpus.rs  lib.rs
fuzzer_device/: Cargo.toml  build.rs  rust-toolchain.toml
fuzzer_device/examples/: cmos.rs  test_cmos.rs  test_time.rs  test_ucode_speculation.rs  test_udp.rs
fuzzer_device/src/: cmos.rs  controller_connection.rs  executor.rs  genetic_breeding.rs  heuristic.rs  lib.rs  main.rs  mutation_engine.rs  perf_monitor.rs
fuzzer_device/src/cmos/: bios_ami.rs  bios_bochs.rs  platform_bochs.rs  platform_intel.rs  platform_standard.rs
fuzzer_device/src/executor/: coverage_collection.rs  fake_coverage_collection.rs  hypervisor.rs
fuzzer_device/src/mutation_engine/: mutate_opcode.rs  random_mutation.rs  serialize.rs
fuzzer_master/: Cargo.toml
fuzzer_master/src/: afl_fuzzing.rs  database.rs  device_connection.rs  fuzzer_node_bridge.rs  genetic_breeding.rs  instruction_mutations.rs  lib.rs  main.rs  main_afl_convert.rs  main_combine.rs  main_compare.rs  main_spec_compare.rs  main_spec_new_database.rs  main_viewer.rs  manual_execution.rs  net.rs  spec_compare.rs  spec_fuzz.rs
fuzzer_master/src/poc/: mod.rs
fuzzer_master/system/: flake.nix  system.nix
fuzzer_node/: Cargo.toml  rocket.toml
hypervisor/: Cargo.toml  README.md  license.md  rust-toolchain.toml
hypervisor/examples/: test_hypervisor.rs
hypervisor/src/: error.rs  lib.rs  main.rs  state.rs  vm.rs  x86_data.rs  x86_instructions.rs
hypervisor/src/hardware_vt/: mod.rs  svm.rs  svm_run_vm.S  vmx.rs  vmx_run_vm.S
literature_search/: .gitignore  Cargo.toml  highlight.txt  inputs.txt  keywords.txt
literature_search/src/: main.rs
nix/: README.md  flake.nix  pinctrl.nix  pinctrl.patch  rust.nix  system.nix
performance-timing/: Cargo.toml
performance_timing/: Cargo.toml
performance_timing/examples/: test.rs
performance_timing/src/: lib.rs  measurements.rs
performance_timing/src/arch/: aarch64.rs  x86.rs
performance_timing_macros/: Cargo.toml
rdrand_test/: Cargo.toml  build.rs
spec_fuzz/: Cargo.toml  build.rs
spec_fuzz/patches/: patch.u
spec_fuzz/src/: controller_connection.rs  lib.rs  main.rs
speculation/: Cargo.toml  build.rs
speculation_ucode/: Cargo.toml  build.rs
speculation_x86/: Cargo.toml  rust-toolchain.toml
speculation_x86/src/: lib.rs  main.rs
ucode_compiler/: .gitignore  Cargo.toml  build.rs  uasm.py.patch
ucode_compiler/src/: compiler_call.rs  lib.rs  uasm.rs  utils.rs
ucode_compiler/src/utils/: instruction.rs  sequence_word.rs
ucode_compiler/tests/: sequence_words.txt
ucode_compiler_bridge/: Cargo.toml
ucode_compiler_derive/: Cargo.toml
ucode_compiler_dynamic/: .gitignore  Cargo.toml  build.rs
ucode_dump/: .gitignore  Cargo.toml  build.rs
(+63 files in other folders)
