[package]
name = "coverage"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.22", optional = true }
uefi = { version = "0.32.0", optional = true, features = ["logger", "panic_handler", "alloc", "global_allocator"] }
custom_processing_unit = { path = "../custom_processing_unit", features = ["no_std"] }
data_types = { path = "../data_types", features = ["nostd"] }
ucode_compiler = { path = "../ucode_compiler", default-features = false, features = ["no_std"] }

[features]
default = ["main"]
main = ["uefi", "dep:log", "no_std"] # dependencies for the main.rs
no_std = [] # when using as a library: no_std
uefi = ["dep:uefi"] # when using uefi features

[build-dependencies]
ucode_compiler = { path = "../ucode_compiler", default-features = false, features = ["uasm"] }
regex = { version = "1.11.0"}