[package]
name = "coverage"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.22" }
uefi = { version = "0.33.0", optional = true, default-features = false, features = ["alloc"] }
custom_processing_unit = { path = "../custom_processing_unit", features = ["nostd"] }
data_types = { path = "../data_types", features = ["nostd"] }
ucode_compiler = { path = "../ucode_compiler", default-features = false, features = ["nostd"] }
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
ucode_dump = { path = "../ucode_dump" }
bitflags = "2.6.0"

[features]
nostd = [] # when using as a library: no_std
uefi = ["dep:uefi", "nostd"] # when using uefi features

[build-dependencies]
ucode_compiler = { path = "../ucode_compiler", default-features = false, features = ["uasm"] }
regex = { version = "1.11.0"}
ucode_dump = { path = "../ucode_dump" }
data_types = { path = "../data_types" }
itertools = "0.14.0"

[dev-dependencies]
ucode_compiler_derive = { path = "../ucode_compiler_derive" }
uefi = { version = "0.33.0", features = ["logger", "panic_handler", "alloc", "global_allocator"] }