[package]
name = "custom_processing_unit"
version = "0.1.0"
edition = "2021"

[features]
nostd = ["data_types/nostd"]
emulation = []

[dependencies]
log = "0.4.22"
data_types = { path = "../data_types" }
ucode_dump = { path = "../ucode_dump" }

[build-dependencies]
ucode_compiler_bridge = { path = "../ucode_compiler_bridge" }

