[package]
name = "emulation_test"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
custom_processing_unit = { path = "../custom_processing_unit", features = ["emulation"] }
data_types = { path = "../data_types", features = [] }
env_logger = "0.11.5"

[build-dependencies]
ucode_compiler = { path = "../ucode_compiler" }