[package]
name = "fuzzer_data"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.218", features = ["alloc", "derive"], default-features = false }
hypervisor = { path = "../hypervisor" }
postcard = { version = "1.1.1", features = ["alloc"], default-features = false }
rand_core = "0.9.2"
