[package]
name = "fuzzer_data"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.218", features = ["alloc", "derive"], default-features = false }
hypervisor = { path = "../hypervisor" }
postcard = { version = "1.1.1", features = ["alloc"], default-features = false }
rand_core = "0.9.2"
iced-x86 = { version = "1.21.0", default-features = false, features = ["decoder", "encoder", "block_encoder", "op_code_info", "instr_info", "gas", "intel", "masm", "nasm", "fast_fmt", "code_asm", "no_std"] }
log = { version = "0.4.26", features = ["serde"] }