[package]
name = "fuzzer_device"
version = "0.1.0"
edition = "2021"

[features]
default = ["device_brix", "mutation_all", "rand_isaac"]

device_bochs = ["platform_bochs", "bios_bochs"]
device_brix  = ["platform_intel", "bios_ami"]

platform_intel = [] # CMOS io port 0x70,0x71,0x72,0x73
platform_bochs = [] # no CMOS memory
bios_ami = []       # American Megatrends BIOS -> CMOS memory offset 0x80, len 64
bios_bochs = []     # no CMOS memory

# Random number generator
rand_isaac  = ["dep:rand_isaac"]

mutation_all = ["mutation_random"]
mutation_random = []  # Random mutation

__debug_bochs_pretend = [] # pretend bochs to be a compatible device for coverage collection
__debug_print_dissassembly = [] # print disassembly of the code
__debug_print_progress = [] # print continous progress, slows down the fuzzer, useful for debugging
__debug_print_external_interrupt_notification = [] # print external interrupt notification

__device_brix = ["device_brix", "rand_isaac", "mutation_all", "__debug_print_dissassembly", "__debug_print_progress", "__debug_print_external_interrupt_notification"]
__device_bochs = ["device_bochs", "rand_isaac", "mutation_all", "__debug_print_dissassembly", "__debug_print_external_interrupt_notification"]

[dependencies]
hypervisor = { path = "../hypervisor" }
coverage = { path = "../coverage", features = ["uefi"], default-features = false }
uefi = { version = "0.33.0", features = ["logger", "panic_handler", "alloc", "global_allocator"] }
log = "0.4.25"
rand_core = "0.9.0"
rand_isaac = {version = "0.4.0", optional = true}
libm = "0.2.11"
derivative = "2.2.0"
data_types = {path = "../data_types"}
iced-x86 = { version = "1.21.0", default-features = false, features = ["decoder", "encoder", "block_encoder", "op_code_info", "instr_info", "gas", "intel", "masm", "nasm", "fast_fmt", "code_asm", "no_std"] }
x86 = "0.52"
custom_processing_unit = {path = "../custom_processing_unit"}
num-traits = { version = "0.2.19", default-features = false }
ucode_dump = { path = "../ucode_dump" }

[build-dependencies]
chrono = "0.4.39"
sha2 = "0.10.8"