[package]
name = "fuzzer_master"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", default-features = false }
tokio = { version = "1.43.0", features = ["full"] }
fuzzer_data = { path = "../fuzzer_data" }
serde_json = "1.0.139"
log = "0.4.25"
env_logger = "0.11.6"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
regex = "1.11.1"