[package]
name = "fuzzer_master"
version = "0.1.0"
edition = "2021"

[features]
__debug_only_below_0x1000 = [] # collect coverage only below address 0x1000

[dependencies]
reqwest = { version = "0.12.12", default-features = false }
tokio = { version = "1.43.1", features = ["full"] }
fuzzer_data = { path = "../fuzzer_data" }
log = "0.4.25"
env_logger = "0.11.6"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
regex = "1.11.1"
serde_json = { version = "1.0.139", features = ["float_roundtrip"]}
rand_isaac = "0.4.0"
hypervisor = { path = "../hypervisor" }
clap = { version = "4.5.31", features = ["derive"] }
iced-x86 = { version = "1.21.0", default-features = false, features = ["decoder", "encoder", "block_encoder", "op_code_info", "instr_info", "gas", "intel", "masm", "nasm", "fast_fmt", "code_asm", "no_std"] }
coverage = { path = "../coverage", features = ["nostd"] }
ucode_dump = { path = "../ucode_dump" }
data_types = { path = "../data_types" }
performance_timing = { path = "../performance_timing" }
ucode_compiler_dynamic = { path = "../ucode_compiler_dynamic" }
x86_perf_counter = { path = "../x86_perf_counter" }
libafl = { version = "0.15.2", features = ["std", "derive"] }
libafl_bolts = "0.15.2"
futures = "0.3.31"
flate2 = "1.0"

[[bin]]
name = "fuzz_master"
path = "src/main.rs"

[[bin]]
name = "fuzz_compare"
path = "src/main_compare.rs"

[[bin]]
name = "fuzz_viewer"
path = "src/main_viewer.rs"

[[bin]]
name = "fuzz_combine"
path = "src/main_combine.rs"

[[bin]]
name = "spec_compare"
path = "src/main_spec_compare.rs"

[[bin]]
name = "spec_new_database"
path = "src/main_spec_new_database.rs"

[[bin]]
name = "afl_convert"
path = "src/main_afl_convert.rs"
