[package]
name = "hypervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.33.0", features = ["logger", "panic_handler", "alloc", "global_allocator"] }
bitfield = "0.17"
bit-vec = { version = "0.8", default-features = false }
derivative = { version ="2.2", features = ["use_core"]}
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
spin = "0.9"
x86 = "0.52"
thiserror-no-std = "2.0.2"

[features]
__disabled = []