[package]
name = "hypervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.33.0", features = ["logger", "alloc"] }
bitfield = "0.17"
bit-vec = { version = "0.8", default-features = false }
derivative = { version ="2.2", features = ["use_core"]}
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
spin = "0.9"
x86 = "0.52"
thiserror-no-std = "2.0.2"
iced-x86 = { version = "1.21.0", default-features = false, features = ["decoder", "encoder", "block_encoder", "op_code_info", "instr_info", "gas", "intel", "masm", "nasm", "fast_fmt", "code_asm", "no_std"] }

[features]
__disabled = []

[dev-dependencies]
uefi = { version = "0.33.0", features = ["panic_handler", "global_allocator"] }
