[package]
name = "hypervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror-no-std = "2.0.2"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"]}
derivative = { version ="2.2", features = ["use_core"]}

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
bitfield = "0.17"
log = { version = "0.4", default-features = false }
x86 = "0.52"
iced-x86 = { version = "1.21.0", default-features = false, features = ["decoder", "encoder", "block_encoder", "op_code_info", "instr_info", "gas", "intel", "masm", "nasm", "fast_fmt", "code_asm", "no_std"] }

[features]
__disabled = []

[dev-dependencies]
uefi = { version = "0.34.1", features = ["panic_handler", "global_allocator"] }
