[package]
name = "literature_search"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {  version = "0.12.8", default-features = false, features = ["http2", "rustls-tls", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
rand = "0.9.0"
lazy_static = "1.5.0"
ratatui = "0.28.1"
crossterm = "0.28.1"
regex = "1.11.0"
