[package]
name = "ucode_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
error-chain = { version = "0.12.4" , optional = true}
regex = { version = "1.11.0", optional = true}
data_types = { path = "../data_types" }

[dev-dependencies]
regex = { version = "1.11.0"}

[features]
default = []
uasm = ["dep:regex", "dep:error-chain"]
no_std = ["data_types/nostd"]
