[package]
name = "ucode_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
error-chain = { version = "0.12.4" , optional = true}
regex = { version = "1.11.0", optional = true}
data_types = { path = "../data_types" }
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }

[dev-dependencies]
regex = { version = "1.11.0"}
custom_processing_unit = { path = "../custom_processing_unit" }

[features]
default = []
uasm = ["dep:regex", "dep:error-chain"]
no_std = ["data_types/nostd"]
