[package]
name = "poc"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "0.4.22" }
uefi = { version = "0.34.1", default-features = false, features = ["alloc", "panic_handler", "global_allocator"] }
custom_processing_unit = { path = "../../custom_processing_unit", features = ["nostd"]}
data_types = { path = "../../data_types", features = ["nostd"] }
ucode_compiler_dynamic = { path = "../../ucode_compiler_dynamic" }
ucode_compiler_derive = { path = "../../ucode_compiler_derive" }
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
ucode_dump = { path = "../../ucode_dump" }

[[bin]]
name = "poc_ucode_update"
path = "src/poc_ucode_update.rs"